# agent-logic

./: .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cspell.json  noxfile.py  pyproject.toml
.github/workflows/: docs.yml  lint.yml  publish.yml  release.yml
agent_logic/: cli.py
agent_logic/core/: operations.py  quantifiers.py
agent_logic/evaluation/: evaluator.py
agent_logic/parsing/: ast_parser.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
examples/: invalid_proof.json  valid_proof.json
logic/: cli.py
logic/core/: base.py  functions.py  operations.py  predicates.py  quantifiers.py
logic/evaluation/: evaluator.py  truth_table.py
logic/models/: llm_proof_model.py
logic/parsing/: ast_parser.py  token_parser.py
logic/proofs/: combinatorial_proofs.py  inference_rules.py  proof_system.py  quantifier_rules.py  sequent_calculus.py  unification.py
logic/transformations/: equivalences.py  normal_forms.py
logic/utils/: __init__.py  logger.py
tests/: test_cli.py  test_core.py  test_inference_rules.py  test_llm_tools.py  test_proof_system.py
