[project]
name = "logic"
version = "0.1.0"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic (>=2.10.6,<3.0.0)"]
description = "Modular symbolic logic system supporting proofs, predicates, inference rules, truth tables, and LLM integration with Pydantic models."

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
